--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        github = "com.github.ymex.kitx"
+        lib = "com.ymex.kitx.tps.umeng"
+
+        kitx = [
+
+                umeng  : [
+                        name   : "umeng",
+                        version: "0.0.3",
+                        bintray: true
+                ],
+        ]
+    }
+
+    dependencies {
+        classpath 'com.huawei.agconnect:agcp:1.4.2.300'
+    }
+}
+
+
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
