--- a/tps-umeng/build.gradle
+++ b/tps-umeng/build.gradle
@@ -66,9 +66,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
 
+
+    //友盟统计
+    api 'com.umeng.umsdk:common:9.5.2'// 必选
+    api 'com.umeng.umsdk:asms:1.6.3'  // 必选
+
+    api  'com.umeng.umsdk:apm:1.7.0' // 错误分析模块改为独立库，看crash和性能数据请一定集成
+    api  'com.umeng.umsdk:abtest:1.0.0'//使用U-App中ABTest能力，可选
+
     //消息推送
-    api 'com.umeng.umsdk:common:9.5.2'
-    api 'com.umeng.umsdk:asms:1.6.3'
+
     api 'com.umeng.umsdk:push:6.5.5'
 
     //小米
