--- a/tps-umeng/src/main/AndroidManifest.xml
+++ b/tps-umeng/src/main/AndroidManifest.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.ymex.kitx.tps.umeng">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+
     <application>
         <!-- 魅族 start-->
         <!--push应用定义消息receiver声明 -->
